# Prune

./: LICENSE  README.md  pyproject.toml
config/: pruning_config.yaml
modelpruner/interfaces/: channel_pruner.py  model_inspector.py  model_loader.py  train_model.py  unstructured_pruner.py
modelpruner/pruning/: channel.py  unstructured.py
modelpruner/utils/: model_profiling.py
scripts/: main.py
tests/: test_pruning_pipeline.py
